--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -23,11 +23,11 @@ services:
       - "8000:8000"
     depends_on:
       db:
-        condition: service_healthy  # Wait for db to be healthy
+        condition: service_healthy  
     environment:
       - DATABASE_URL=postgresql://user1:password1@db:5432/resilience_db
     volumes:
-      - ./:/app
+      - .:/app
     command: >
       sh -c "sleep 5 && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     # Add this restart policy
